# GoPyLink

./: .gitignore  README.md  go.mod  go.sum  gopylink.go  pyproject.toml
.github/workflows/: lint.yml  publish.yml  testing.yml
examples/go_call_python/: app.py  lib.go  run.sh
examples/python_call_go/: app.py  lib.go
gopylink/: __init__.py  registry.py
tests/: run.sh
tests/multi_lib/: a.go  b.go  c.go  main.py  run.sh
