[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gopylink*"]

[project]
name = "gopylink"
version = "0.1.0"
description = "Call Go from Python and call Python from Go, simply."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "WeiminWang", email = "wang0.618@qq.com" }
]
license = "MIT"
dependencies = ["goray"]

[project.urls]
Homepage = "https://github.com/ray4go/GoPyLink"
