[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gopylink*"]

[project]
name = "gopylink"
version = "0.1.0"
description = "Call Go from Python and call Python from Go, simply."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "WeiminWang", email = "wang0.618@qq.com" }
]
license = "MIT"
dependencies = ["goray>=1.2.0"]

[project.urls]
Homepage = "https://github.com/ray4go/GoPyLink"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "output",
    "tests",
]
